--- a/clairvoyance/res/raw/layouts/startScreen.xml
+++ b/clairvoyance/res/raw/layouts/startScreen.xml
@@ -22,5 +22,11 @@
                     android:layout_height="wrap_content" android:text="View Coverage Maps"></Button>            
             
         </LinearLayout>
+        
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout5">
+	    <Button android:id="@+id/viewAbout" android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:text="About/Help"></Button>            
+            
+        </LinearLayout>
 
 </LinearLayout>
