--- a/clairvoyance/res/raw/layouts/settings.xml
+++ b/clairvoyance/res/raw/layouts/settings.xml
@@ -31,9 +31,22 @@
                     android:id="@+id/currentMinimumBattery" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="right"></TextView>
         </LinearLayout>
 
+
+        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout6">
+	    <Button android:id="@+id/bufferSizeSlider" android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:text="Change the buffer size."></Button>            
+            <TextView android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:text="30"
+                    android:id="@+id/bufferSize" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="right"></TextView>
+        </LinearLayout>
+
+
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout5">
 	    <TextView android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:text="none"
                     android:id="@+id/currentNetworkSSID" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="left"></TextView>
         </LinearLayout>
+        
+        
+
 </LinearLayout>
