--- a/clairvoyance/res/raw/layouts/startScreen.xml
+++ b/clairvoyance/res/raw/layouts/startScreen.xml
@@ -4,7 +4,12 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="match_parent" android:background="#ff000000">
 
-
+        
+        <ImageView
+            android:id="@+id/mainLogo"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" 
+            android:layout_gravity="bottom"/>
         
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">
 	    <Button android:id="@+id/collectData" android:layout_width="wrap_content"
