--- a/clairvoyance/res/raw/layouts/collectData.xml
+++ b/clairvoyance/res/raw/layouts/collectData.xml
@@ -13,12 +13,6 @@
                     android:id="@+id/scanInterval" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="left"></TextView>
         </LinearLayout>
 
-        
-        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2">           
-            <TextView android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:text="30"
-                    android:id="@+id/throughputInterval" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="left"></TextView>
-        </LinearLayout>
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
            
@@ -53,7 +47,7 @@
         
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout7">
 	    <TextView android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:text="not assigned"
+                    android:layout_height="wrap_content" android:text="NO GPS LOCK"
                     android:id="@+id/status" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="left"></TextView>
                     
         </LinearLayout>
