--- a/clairvoyance/res/raw/layouts/settings.xml
+++ b/clairvoyance/res/raw/layouts/settings.xml
@@ -26,7 +26,7 @@
 
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3">
 	    <Button android:id="@+id/bufferSizeSlider" android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:text="Change the buffer size."></Button>            
+                    android:layout_height="wrap_content" android:text="Change the Buffer Limit"></Button>            
             <TextView android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:text="30"
                     android:id="@+id/bufferSize" android:textAppearance="?android:attr/textAppearanceLarge" android:gravity="right"></TextView>
